--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "manager",
-  "version": "1.0.0",
+  "name": "nvmpls",
+  "version": "1.0.5",
   "description": "A simple cli to manage your angular projects",
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "nvmpls": "nvmpls",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,9 +18,13 @@
     "shelljs": "0.8.5"
   },
   "devDependencies": {
+    "nvmpls": "file://.",
     "prettier": "2.8.4",
     "prettier-config-standard": "5.0.0",
     "standard": "17.0.0"
+  },
+  "bin": {
+    "nvmpls": "src/index.js"
   },
   "eslintConfig": {
     "env": {
