--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@bdsqqq/try": "2.3.1",
     "@clack/prompts": "0.6.1",
+    "keypress": "^0.2.1",
     "picocolors": "1.0.0",
     "shelljs": "0.8.5"
   },
